// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analytics SQL builders (DB-free) binds order filters and pagination with stable ordering 1`] = `
{
  "query": "WITH
    raw_orders AS (
      SELECT
        JSON_VALUE(properties, '$.orderId') AS raw_order_id,
        multiIf(
          raw_order_id = '', message_id,
          match(raw_order_id, '^gid://shopify/Order/[0-9]+$'),
            extract(raw_order_id, '([0-9]+)$'),
          raw_order_id
        ) AS order_id,
        user_id,
        coalesce(
          parseDateTime64BestEffortOrNull(JSONExtractString(properties, 'paidAt'), 3, 'UTC'),
          event_time
        ) AS order_time,
        if(
          JSONHas(properties, 'amountCents'),
          toInt64OrZero(JSON_VALUE(properties, '$.amountCents')),
          toInt64(round(toFloat64OrZero(JSON_VALUE(properties, '$.total')) * 100))
        ) AS amount_cents,
        if(
          JSONExtractString(properties, 'kind') != '',
          JSONExtractString(properties, 'kind'),
          multiIf(
            JSON_VALUE(properties, '$.isFirstOrder') = 'true', 'new',
            JSON_VALUE(properties, '$.isFirstOrder') = 'false', 'renewal',
            'unknown'
          )
        ) AS order_kind,
        processing_time
      FROM user_events_v2
      WHERE
        workspace_id = {v0:String}
        AND event_type = 'track'
        AND event = 'order_paid'
        AND user_id != ''
        AND hidden = false
        AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    deduplicated_orders AS (
      SELECT
        order_id,
        argMax(user_id, processing_time) AS user_id,
        argMax(order_time, processing_time) AS order_time,
        argMax(amount_cents, processing_time) AS amount_cents,
        argMax(order_kind, processing_time) AS order_kind
      FROM raw_orders
      GROUP BY order_id
    ),
    orders AS (
      SELECT *
      FROM deduplicated_orders
      WHERE
        order_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND order_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    touches AS (
      SELECT
        user_id,
        event_time AS touch_time,
        template_id,
        broadcast_id,
        journey_id,
        JSONExtractString(properties, 'nodeId') AS journey_node_id,
        if(origin_message_id = '', message_id, origin_message_id) AS attributed_message_id
      FROM internal_events
      WHERE
        workspace_id = {v0:String}
        AND event IN {v4:Array(String)}
        AND user_id != ''
        AND hidden = false
        AND event_time >= subtractDays(
          parseDateTime64BestEffort({v1:String}, 3, 'UTC'),
          {v3:Int32}
        )
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    attributed_orders AS (
      SELECT
        o.order_id,
        o.user_id,
        o.order_time,
        o.amount_cents,
        o.order_kind,
        if(
          c.touch_time >= subtractDays(o.order_time, {v3:Int32}),
          c.touch_time,
          toDateTime64(0, 3, 'UTC')
        ) AS touch_time,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.template_id, '') AS template_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.broadcast_id, '') AS broadcast_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_id, '') AS journey_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_node_id, '') AS journey_node_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.attributed_message_id, '') AS attributed_message_id
      FROM (SELECT * FROM orders ORDER BY user_id, order_time) AS o
      ASOF LEFT JOIN (
        SELECT user_id, touch_time,
          argMax(t.template_id, t.attributed_message_id) AS template_id,
          argMax(t.broadcast_id, t.attributed_message_id) AS broadcast_id,
          argMax(t.journey_id, t.attributed_message_id) AS journey_id,
          argMax(t.journey_node_id, t.attributed_message_id) AS journey_node_id,
          max(t.attributed_message_id) AS attributed_message_id
        FROM touches AS t GROUP BY user_id, touch_time ORDER BY user_id, touch_time
      ) AS c
        ON o.user_id = c.user_id AND o.order_time >= c.touch_time
    )
      SELECT order_id AS orderId, user_id AS userId, toString(order_time) AS date,
        amount_cents AS amountCents, order_kind AS kind,
        journey_id AS journeyId, broadcast_id AS broadcastId,
        journey_node_id AS nodeId, template_id AS templateId, attributed_message_id AS messageId,
        if(attributed_message_id = '', NULL, dateDiff('second', touch_time, order_time) / 60.0) AS minutesSinceClick
      FROM attributed_orders AS ao WHERE ao.journey_id IN {v5:Array(String)} AND ao.template_id IN {v6:Array(String)}
      ORDER BY order_time DESC, order_id DESC
      LIMIT {v7:UInt32} OFFSET {v8:UInt32}",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
    "v3": 7,
    "v4": [
      "DFEmailClicked",
      "DFSmsClicked",
    ],
    "v5": [
      "flow-'",
    ],
    "v6": [
      "template",
    ],
    "v7": 101,
    "v8": 100,
  },
}
`;

exports[`analytics SQL builders (DB-free) binds the selected attribution window and ignores opens even when the legacy flag is true 1`] = `
{
  "query": "WITH
    raw_orders AS (
      SELECT
        JSON_VALUE(properties, '$.orderId') AS raw_order_id,
        multiIf(
          raw_order_id = '', message_id,
          match(raw_order_id, '^gid://shopify/Order/[0-9]+$'),
            extract(raw_order_id, '([0-9]+)$'),
          raw_order_id
        ) AS order_id,
        user_id,
        coalesce(
          parseDateTime64BestEffortOrNull(JSONExtractString(properties, 'paidAt'), 3, 'UTC'),
          event_time
        ) AS order_time,
        if(
          JSONHas(properties, 'amountCents'),
          toInt64OrZero(JSON_VALUE(properties, '$.amountCents')),
          toInt64(round(toFloat64OrZero(JSON_VALUE(properties, '$.total')) * 100))
        ) AS amount_cents,
        if(
          JSONExtractString(properties, 'kind') != '',
          JSONExtractString(properties, 'kind'),
          multiIf(
            JSON_VALUE(properties, '$.isFirstOrder') = 'true', 'new',
            JSON_VALUE(properties, '$.isFirstOrder') = 'false', 'renewal',
            'unknown'
          )
        ) AS order_kind,
        processing_time
      FROM user_events_v2
      WHERE
        workspace_id = {v0:String}
        AND event_type = 'track'
        AND event = 'order_paid'
        AND user_id != ''
        AND hidden = false
        AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    deduplicated_orders AS (
      SELECT
        order_id,
        argMax(user_id, processing_time) AS user_id,
        argMax(order_time, processing_time) AS order_time,
        argMax(amount_cents, processing_time) AS amount_cents,
        argMax(order_kind, processing_time) AS order_kind
      FROM raw_orders
      GROUP BY order_id
    ),
    orders AS (
      SELECT *
      FROM deduplicated_orders
      WHERE
        order_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND order_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    touches AS (
      SELECT
        user_id,
        event_time AS touch_time,
        template_id,
        broadcast_id,
        journey_id,
        JSONExtractString(properties, 'nodeId') AS journey_node_id,
        if(origin_message_id = '', message_id, origin_message_id) AS attributed_message_id
      FROM internal_events
      WHERE
        workspace_id = {v0:String}
        AND event IN {v4:Array(String)}
        AND user_id != ''
        AND hidden = false
        AND event_time >= subtractDays(
          parseDateTime64BestEffort({v1:String}, 3, 'UTC'),
          {v3:Int32}
        )
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    ),
    attributed_orders AS (
      SELECT
        o.order_id,
        o.user_id,
        o.order_time,
        o.amount_cents,
        o.order_kind,
        if(
          c.touch_time >= subtractDays(o.order_time, {v3:Int32}),
          c.touch_time,
          toDateTime64(0, 3, 'UTC')
        ) AS touch_time,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.template_id, '') AS template_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.broadcast_id, '') AS broadcast_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_id, '') AS journey_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.journey_node_id, '') AS journey_node_id,
        if(c.touch_time >= subtractDays(o.order_time, {v3:Int32}), c.attributed_message_id, '') AS attributed_message_id
      FROM (SELECT * FROM orders ORDER BY user_id, order_time) AS o
      ASOF LEFT JOIN (
        SELECT user_id, touch_time,
          argMax(t.template_id, t.attributed_message_id) AS template_id,
          argMax(t.broadcast_id, t.attributed_message_id) AS broadcast_id,
          argMax(t.journey_id, t.attributed_message_id) AS journey_id,
          argMax(t.journey_node_id, t.attributed_message_id) AS journey_node_id,
          max(t.attributed_message_id) AS attributed_message_id
        FROM touches AS t GROUP BY user_id, touch_time ORDER BY user_id, touch_time
      ) AS c
        ON o.user_id = c.user_id AND o.order_time >= c.touch_time
    )
      SELECT journey_id AS journeyId, broadcast_id AS broadcastId,
        journey_node_id AS nodeId, template_id AS templateId,
        toString(toDate(order_time, 'UTC')) AS day, order_kind AS kind,
        toUInt8(attributed_message_id != '') AS attributed,
        count() AS orders, sum(amount_cents) AS revenueCents
      FROM attributed_orders
      GROUP BY journeyId, broadcastId, nodeId, templateId, day, kind, attributed",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
    "v3": 7,
    "v4": [
      "DFEmailClicked",
      "DFSmsClicked",
    ],
  },
}
`;

exports[`analytics SQL builders (DB-free) requires a permanent/hard classification for bounce addresses 1`] = `
{
  "query": "SELECT user_id AS userId,
      if(slim.address = '', user_id, slim.address) AS address,
      event, toString(max(event_time)) AS date
      FROM dittofeed.message_events_slim AS slim
      PREWHERE workspace_id = {v0:String}
        AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
        AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
      WHERE hidden = false
        AND (event IN ('DFEmailMarkedSpam', 'DFEmailComplaint') OR
          (event = 'DFEmailBounced' AND lowerUTF8(bounce_type) IN ('permanent', 'hard', 'hardbounce')))
      GROUP BY userId, address, event ORDER BY date DESC, userId LIMIT 1000",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`analytics SQL builders (DB-free) snapshots day SQL and binds workspace/range 1`] = `
{
  "query": "WITH events AS (
    SELECT event, event_time, resolved_id, journey_id, node_id, template_id,
      broadcast_id, address, channel, action
    FROM dittofeed.message_events_slim
    PREWHERE workspace_id = {v0:String}
      AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    WHERE hidden = false AND channel NOT IN ('MobilePush', 'Webhook')
  ), dimensions AS (
    SELECT resolved_id,
      argMaxIf(journey_id, event_time, journey_id != '') AS journeyId,
      argMaxIf(node_id, event_time, node_id != '') AS nodeId,
      argMaxIf(template_id, event_time, template_id != '') AS templateId,
      argMaxIf(broadcast_id, event_time, broadcast_id != '') AS broadcastId,
      argMaxIf(events.address, event_time, events.address != '') AS address,
      argMaxIf(events.channel, event_time, events.channel != '') AS channel
    FROM events GROUP BY resolved_id
  ), messages AS (
    SELECT e.resolved_id, toString(toDate(e.event_time, 'UTC')) AS day,
      d.journeyId AS journeyId, d.nodeId AS nodeId, d.templateId AS templateId, d.broadcastId AS broadcastId,
      if(lowerUTF8(arrayElement(splitByChar('@', d.address), -1)) IN ('gmail.com', 'yahoo.com', 'icloud.com', 'outlook.com'), lowerUTF8(arrayElement(splitByChar('@', d.address), -1)), 'other') AS domain,
      toUInt64(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) > 0) AS sends,
      toUInt64(countIf(event IN ('DFEmailDelivered', 'DFSmsDelivered')) > 0) AS delivered,
      toUInt64(countIf(event = 'DFEmailOpened') > 0) AS opened,
      toUInt64(countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) > 0) AS clicked,
      toUInt64(countIf(event = 'DFEmailBounced') > 0) AS bounced,
      toUInt64(countIf(event IN ('DFEmailMarkedSpam', 'DFEmailComplaint')) > 0) AS complaint,
      toUInt64(countIf((event = 'DFEmailUnsubscribed' OR (event = 'DFSubscriptionChange' AND action = 'Unsubscribe'))) > 0) AS unsubscribed,
      toUInt64(countIf(event = 'DFSmsFailed') > 0) AS smsFailed,
      countIf(event = 'DFEmailOpened') AS rawOpened, countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) AS rawClicked,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(maxIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS lastSend,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(minIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS sentAt
    FROM events e INNER JOIN dimensions d ON e.resolved_id = d.resolved_id

    GROUP BY e.resolved_id, day, journeyId, nodeId, templateId, broadcastId, domain
  )
  SELECT journeyId, nodeId, templateId, broadcastId, day,
    sum(sends) AS sends, sum(delivered) AS delivered, sum(opened) AS opened, sum(clicked) AS clicked, sum(bounced) AS bounced, sum(complaint) AS complaint, sum(unsubscribed) AS unsubscribed, sum(smsFailed) AS smsFailed, sum(rawOpened) AS rawOpened, sum(rawClicked) AS rawClicked, max(lastSend) AS lastSend, minIf(sentAt, sentAt != '') AS sentAt
  FROM messages GROUP BY journeyId, nodeId, templateId, broadcastId, day",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`analytics SQL builders (DB-free) snapshots domain SQL and binds workspace/range 1`] = `
{
  "query": "WITH events AS (
    SELECT event, event_time, resolved_id, journey_id, node_id, template_id,
      broadcast_id, address, channel, action
    FROM dittofeed.message_events_slim
    PREWHERE workspace_id = {v0:String}
      AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    WHERE hidden = false AND channel NOT IN ('MobilePush', 'Webhook')
  ), dimensions AS (
    SELECT resolved_id,
      argMaxIf(journey_id, event_time, journey_id != '') AS journeyId,
      argMaxIf(node_id, event_time, node_id != '') AS nodeId,
      argMaxIf(template_id, event_time, template_id != '') AS templateId,
      argMaxIf(broadcast_id, event_time, broadcast_id != '') AS broadcastId,
      argMaxIf(events.address, event_time, events.address != '') AS address,
      argMaxIf(events.channel, event_time, events.channel != '') AS channel
    FROM events GROUP BY resolved_id
  ), messages AS (
    SELECT e.resolved_id, '' AS day,
      d.journeyId AS journeyId, d.nodeId AS nodeId, d.templateId AS templateId, d.broadcastId AS broadcastId,
      if(lowerUTF8(arrayElement(splitByChar('@', d.address), -1)) IN ('gmail.com', 'yahoo.com', 'icloud.com', 'outlook.com'), lowerUTF8(arrayElement(splitByChar('@', d.address), -1)), 'other') AS domain,
      toUInt64(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) > 0) AS sends,
      toUInt64(countIf(event IN ('DFEmailDelivered', 'DFSmsDelivered')) > 0) AS delivered,
      toUInt64(countIf(event = 'DFEmailOpened') > 0) AS opened,
      toUInt64(countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) > 0) AS clicked,
      toUInt64(countIf(event = 'DFEmailBounced') > 0) AS bounced,
      toUInt64(countIf(event IN ('DFEmailMarkedSpam', 'DFEmailComplaint')) > 0) AS complaint,
      toUInt64(countIf((event = 'DFEmailUnsubscribed' OR (event = 'DFSubscriptionChange' AND action = 'Unsubscribe'))) > 0) AS unsubscribed,
      toUInt64(countIf(event = 'DFSmsFailed') > 0) AS smsFailed,
      countIf(event = 'DFEmailOpened') AS rawOpened, countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) AS rawClicked,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(maxIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS lastSend,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(minIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS sentAt
    FROM events e INNER JOIN dimensions d ON e.resolved_id = d.resolved_id
    WHERE d.channel NOT IN ('Sms', 'MobilePush', 'Webhook') AND NOT startsWith(e.event, 'DFSms')
    GROUP BY e.resolved_id, day, journeyId, nodeId, templateId, broadcastId, domain
  )
  SELECT domain AS id, '' AS journeyId, '' AS nodeId, '' AS templateId, '' AS broadcastId, '' AS day,
    sum(sends) AS sends, sum(delivered) AS delivered, sum(opened) AS opened, sum(clicked) AS clicked, sum(bounced) AS bounced, sum(complaint) AS complaint, sum(unsubscribed) AS unsubscribed, sum(smsFailed) AS smsFailed, sum(rawOpened) AS rawOpened, sum(rawClicked) AS rawClicked, max(lastSend) AS lastSend, minIf(sentAt, sentAt != '') AS sentAt
  FROM messages GROUP BY domain",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`analytics SQL builders (DB-free) snapshots message SQL and binds workspace/range 1`] = `
{
  "query": "WITH events AS (
    SELECT event, event_time, resolved_id, journey_id, node_id, template_id,
      broadcast_id, address, channel, action
    FROM dittofeed.message_events_slim
    PREWHERE workspace_id = {v0:String}
      AND event_time >= parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      AND event_time < parseDateTime64BestEffort({v2:String}, 3, 'UTC')
    WHERE hidden = false AND channel NOT IN ('MobilePush', 'Webhook')
  ), dimensions AS (
    SELECT resolved_id,
      argMaxIf(journey_id, event_time, journey_id != '') AS journeyId,
      argMaxIf(node_id, event_time, node_id != '') AS nodeId,
      argMaxIf(template_id, event_time, template_id != '') AS templateId,
      argMaxIf(broadcast_id, event_time, broadcast_id != '') AS broadcastId,
      argMaxIf(events.address, event_time, events.address != '') AS address,
      argMaxIf(events.channel, event_time, events.channel != '') AS channel
    FROM events GROUP BY resolved_id
  ), messages AS (
    SELECT e.resolved_id, '' AS day,
      d.journeyId AS journeyId, d.nodeId AS nodeId, d.templateId AS templateId, d.broadcastId AS broadcastId,
      if(lowerUTF8(arrayElement(splitByChar('@', d.address), -1)) IN ('gmail.com', 'yahoo.com', 'icloud.com', 'outlook.com'), lowerUTF8(arrayElement(splitByChar('@', d.address), -1)), 'other') AS domain,
      toUInt64(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) > 0) AS sends,
      toUInt64(countIf(event IN ('DFEmailDelivered', 'DFSmsDelivered')) > 0) AS delivered,
      toUInt64(countIf(event = 'DFEmailOpened') > 0) AS opened,
      toUInt64(countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) > 0) AS clicked,
      toUInt64(countIf(event = 'DFEmailBounced') > 0) AS bounced,
      toUInt64(countIf(event IN ('DFEmailMarkedSpam', 'DFEmailComplaint')) > 0) AS complaint,
      toUInt64(countIf((event = 'DFEmailUnsubscribed' OR (event = 'DFSubscriptionChange' AND action = 'Unsubscribe'))) > 0) AS unsubscribed,
      toUInt64(countIf(event = 'DFSmsFailed') > 0) AS smsFailed,
      countIf(event = 'DFEmailOpened') AS rawOpened, countIf(event IN ('DFEmailClicked', 'DFSmsClicked')) AS rawClicked,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(maxIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS lastSend,
      if(countIf(event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')) = 0, '', formatDateTime(minIf(event_time, event IN ('DFInternalMessageSent', 'DFEmailSent', 'DFSmsSent')), '%Y-%m-%dT%H:%i:%SZ', 'UTC')) AS sentAt
    FROM events e INNER JOIN dimensions d ON e.resolved_id = d.resolved_id

    GROUP BY e.resolved_id, day, journeyId, nodeId, templateId, broadcastId, domain
  )
  SELECT journeyId, nodeId, templateId, broadcastId, day,
    sum(sends) AS sends, sum(delivered) AS delivered, sum(opened) AS opened, sum(clicked) AS clicked, sum(bounced) AS bounced, sum(complaint) AS complaint, sum(unsubscribed) AS unsubscribed, sum(smsFailed) AS smsFailed, sum(rawOpened) AS rawOpened, sum(rawClicked) AS rawClicked, max(lastSend) AS lastSend, minIf(sentAt, sentAt != '') AS sentAt
  FROM messages GROUP BY journeyId, nodeId, templateId, broadcastId, day",
  "query_params": {
    "v0": "workspace-' OR 1=1 --",
    "v1": "2026-08-01T00:00:00.000Z",
    "v2": "2026-08-31T00:00:00.000Z",
  },
}
`;

exports[`message events slim migration uses the same projection and event filter for live ingestion and backfill 1`] = `
{
  "backfill": {
    "query": "INSERT INTO dittofeed.message_events_slim (workspace_id, user_or_anonymous_id,
  user_id, processing_time, event_time, event, message_id, resolved_id,
  journey_id, node_id, template_id, broadcast_id, run_id, channel, address,
  hidden, action, bounce_type)
      SELECT
  workspace_id, user_or_anonymous_id, user_id, processing_time, event_time, event, message_id,
  if(JSONExtractString(properties, 'messageId') != '', JSONExtractString(properties, 'messageId'), message_id) AS resolved_id,
  JSONExtractString(properties, 'journeyId') AS journey_id,
  JSONExtractString(properties, 'nodeId') AS node_id,
  JSONExtractString(properties, 'templateId') AS template_id,
  JSONExtractString(properties, 'broadcastId') AS broadcast_id,
  JSONExtractString(properties, 'runId') AS run_id,
  JSONExtractString(properties, 'variant', 'type') AS channel,
  coalesce(nullIf(JSONExtractString(properties, 'email'), ''), nullIf(JSONExtractString(properties, 'variant', 'to'), ''), '') AS address,
  hidden,
  JSONExtractString(properties, 'action') AS action,
  coalesce(nullIf(JSONExtractString(properties, 'bounceType'), ''), JSONExtractString(properties, 'bounce', 'bounceType')) AS bounce_type
FROM dittofeed.user_events_v2
      PREWHERE workspace_id = {v2:String} AND
        processing_time >= parseDateTime64BestEffort({v0:String}, 3, 'UTC')
        AND processing_time < parseDateTime64BestEffort({v1:String}, 3, 'UTC')
      WHERE event_type = 'track' AND
  (event IN ('DFInternalMessageSent', 'DFSubscriptionChange')
    OR startsWith(event, 'DFEmail') OR startsWith(event, 'DFSms'))
        AND (workspace_id, message_id, event, event_time) NOT IN (
          SELECT workspace_id, message_id, event, event_time
          FROM dittofeed.message_events_slim
          WHERE workspace_id = {v2:String}
        )
      ORDER BY processing_time DESC
      LIMIT 1 BY workspace_id, message_id, event, event_time",
    "query_params": {
      "v0": "2026-08-01T00:00:00.000Z",
      "v1": "2026-08-31T00:00:00.000Z",
      "v2": "workspace-' OR 1=1 --",
    },
  },
  "mv": "
  CREATE MATERIALIZED VIEW IF NOT EXISTS dittofeed.message_events_slim_mv
  TO dittofeed.message_events_slim
  AS SELECT
  workspace_id, user_or_anonymous_id, user_id, processing_time, event_time, event, message_id,
  if(JSONExtractString(properties, 'messageId') != '', JSONExtractString(properties, 'messageId'), message_id) AS resolved_id,
  JSONExtractString(properties, 'journeyId') AS journey_id,
  JSONExtractString(properties, 'nodeId') AS node_id,
  JSONExtractString(properties, 'templateId') AS template_id,
  JSONExtractString(properties, 'broadcastId') AS broadcast_id,
  JSONExtractString(properties, 'runId') AS run_id,
  JSONExtractString(properties, 'variant', 'type') AS channel,
  coalesce(nullIf(JSONExtractString(properties, 'email'), ''), nullIf(JSONExtractString(properties, 'variant', 'to'), ''), '') AS address,
  hidden,
  JSONExtractString(properties, 'action') AS action,
  coalesce(nullIf(JSONExtractString(properties, 'bounceType'), ''), JSONExtractString(properties, 'bounce', 'bounceType')) AS bounce_type
FROM dittofeed.user_events_v2
  WHERE event_type = 'track' AND
  (event IN ('DFInternalMessageSent', 'DFSubscriptionChange')
    OR startsWith(event, 'DFEmail') OR startsWith(event, 'DFSms'));
",
  "table": "
  CREATE TABLE IF NOT EXISTS dittofeed.message_events_slim (
    workspace_id String,
    user_or_anonymous_id String,
    user_id String,
    processing_time DateTime64(3),
    event_time DateTime64(3),
    event LowCardinality(String),
    message_id String,
    resolved_id String,
    journey_id String,
    node_id String,
    template_id String,
    broadcast_id String,
    run_id String,
    channel LowCardinality(String),
    address String,
    hidden Bool,
    action String,
    bounce_type String
  )
  ENGINE = MergeTree()
  ORDER BY (workspace_id, event_time, resolved_id, event, message_id);
",
}
`;
